# vellum

./: Cargo.toml  LICENSE  README.md  install.sh
examples/: glow.lrc
src/: app.rs  display.rs  kitty.rs  lyrics.rs  main.rs  player.rs  render.rs
