[package]
name = "vellum"
version = "0.1.0"
edition = "2021"
description = "A Kitty-compatible TUI for word-synced lyrics from MPRIS players"
license = "MIT"
repository = "https://github.com/beamlakchernet/vellum"
keywords = ["lyrics", "music", "mpris", "tui", "kitty"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.5.2"
mpris = "2.1.0"
fontdue = "0.9"
base64 = "0.21"
libc = "0.2"
